--- a/style.css
+++ b/style.css
@@ -99,6 +99,9 @@ body{
     position: absolute;
     display: none;
 }
+
+
+
 #infobox{
     right: 40px;
     bottom: 20px;
@@ -160,6 +163,8 @@ body{
     background-color: red;
 }
 
+
+
 #dialog{
     display: none;
     position: absolute;
@@ -168,25 +173,26 @@ body{
     width: 100%;
     height: 100%;
     background-color: rgba(128, 128, 128, 0.5);
+    
+    align-items: center;
+    justify-content: center;
 }
 #dialog-window{
     border: 1px solid black;
     background-color: white;
     width: 600px;
     min-height: 200px;
-    margin:auto;
-    margin-top: 200px;
     padding: 10px;
 }
-#dialog-contents.select-recipe input{
+#dialog-contents.select-dialog input{
     width: 90%;
     display: block;
     margin: auto;
     margin-bottom: 0.5em;
 }
-#dialog-contents.select-recipe img{
+#dialog-contents.select-dialog img{
     padding: 2px;
 }
-#dialog-contents.select-recipe img:hover{
+#dialog-contents.select-dialog img:hover{
     background-color: green;
 }
