--- a/style.css
+++ b/style.css
@@ -289,7 +289,7 @@ button.fill{
     font-size: 14pt;
     border-bottom: 1px solid gray;
     padding-left: 0.5em;
-    margin-top: 5px;
+    margin-top: 1em;
 }
 #dialog-contents.open-dialog textarea{
     border: 1px solid black;
