--- a/style.css
+++ b/style.css
@@ -74,21 +74,17 @@ button.fill{
     width: 20px;
 }
 .toolbox li.split-button button:last-child{
-    display: flex;
     padding: 1px;
-    flex-direction: row;
     border-left: 1px solid white;
     padding-left: 10px;
-    align-items: center;
 }
-.toolbox li.split-button button:last-child:after{
-    content: "\25BC";
-    font-size: 10pt;
-    padding-left: 5px;
-}
-.split-button img{
+.toolbox li.split-button img{
     width: 24px;
     height: 24px;
+    vertical-align: middle;
+}
+.toolbox li.split-button span{
+    padding-right: 3px;
 }
 
 
@@ -114,6 +110,7 @@ button.fill{
     display: flex;
 }
 #plan-name{
+    width: 100px;
     margin-right: 5px;
     padding-right :5px;
     padding-left :5px;
